force-app/main/default/objects/Regulatory_Decision_Event__e/Regulatory_Decision_Event__e.object-meta.xml
<CustomObject>
    <label>Regulatory Decision Event</label>
    <pluralLabel>Regulatory Decision Event</pluralLabel>
</CustomObject>