force-app/main/default/objects/Regulatory_Decision_Event__e/fields/changedFields__c.field-meta.xml
<CustomField>
    <fullName>changedFields__c</fullName>
    <label>changedFields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>