force-app/main/default/objects/Regulatory_Decision_Event__e/fields/changeOrigin__c.field-meta.xml
<CustomField>
    <fullName>changeOrigin__c</fullName>
    <label>changeOrigin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>