force-app/main/default/objects/Regulatory_Decision_Event__e/fields/changeType__c.field-meta.xml
<CustomField>
    <fullName>changeType__c</fullName>
    <label>changeType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>