force-app/main/default/objects/Regulatory_Decision_Event__e/fields/commitNumber__c.field-meta.xml
<CustomField>
    <fullName>commitNumber__c</fullName>
    <label>commitNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>