force-app/main/default/objects/Regulatory_Decision_Event__e/fields/commitUser__c.field-meta.xml
<CustomField>
    <fullName>commitUser__c</fullName>
    <label>commitUser</label>
    <length>50</length>
    <type>Text</type>
</CustomField>