force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Compliance_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Due_Date__c</fullName>
    <label>Compliance Due Date</label>
    <type>Date</type>
</CustomField>