force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Corrective_Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Description__c</fullName>
    <label>Corrective Action Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>