force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>