force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Date_Decision_Ends__c.field-meta.xml
<CustomField>
    <fullName>Date_Decision_Ends__c</fullName>
    <label>Date Decision Ends</label>
    <type>Date</type>
</CustomField>