force-app/main/default/objects/Regulatory_Decision_Event__e/fields/DateCreated__c.field-meta.xml
<CustomField>
    <fullName>DateCreated__c</fullName>
    <label>DateCreated</label>
    <type>DateTime</type>
</CustomField>