force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Decision_Details__c.field-meta.xml
<CustomField>
    <fullName>Decision_Details__c</fullName>
    <label>Decision Details</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>