force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Default_Service_Compliance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Default_Service_Compliance_Rating__c</fullName>
    <label>Default: Service Compliance Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>