force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <label>Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>