force-app/main/default/objects/Regulatory_Decision_Event__e/fields/NAPS_Service_ID__c.field-meta.xml
<CustomField>
    <fullName>NAPS_Service_ID__c</fullName>
    <label>NAPS Service ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>