force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>