force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Publishing_Status__c.field-meta.xml
<CustomField>
    <fullName>Publishing_Status__c</fullName>
    <label>Publishing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>