force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Rating_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Rating_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rating Relevant</label>
    <type>Checkbox</type>
</CustomField>