force-app/main/default/objects/Regulatory_Decision_Event__e/fields/recordIds__c.field-meta.xml
<CustomField>
    <fullName>recordIds__c</fullName>
    <label>recordIds</label>
    <length>50</length>
    <type>Text</type>
</CustomField>