force-app/main/default/objects/Regulatory_Decision_Event__e/fields/RecurrenceCount__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceCount__c</fullName>
    <label>Recurrence</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>