force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Regulatory_Decision_Id__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Decision_Id__c</fullName>
    <description>Id to the Regulatory decision triggering the event</description>
    <label>Regulatory Decision Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>