force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Regulatory_Decision_Made__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Decision_Made__c</fullName>
    <label>Regulatory Decision Made</label>
    <length>255</length>
    <type>Text</type>
</CustomField>