force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Removed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Removed_Reason__c</fullName>
    <label>Removed Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>