force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <label>Resolution Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>