force-app/main/default/objects/Regulatory_Decision_Event__e/fields/SCR_Rating__c.field-meta.xml
<CustomField>
    <fullName>SCR_Rating__c</fullName>
    <label>SCR Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>