force-app/main/default/objects/Regulatory_Decision_Event__e/fields/SCR_Rating_Description__c.field-meta.xml
<CustomField>
    <fullName>SCR_Rating_Description__c</fullName>
    <label>SCR Rating Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>