force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Service_Account_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Relationship__c</fullName>
    <label>Service Account Relationship</label>
    <length>100</length>
    <type>Text</type>
</CustomField>