force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Service_Compliance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Service_Compliance_Rating__c</fullName>
    <label>Service Compliance Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>