force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Service_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Name__c</fullName>
    <description>Id for look up to Provider Account</description>
    <label>Service Provider Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>