force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Service_Provider_Name_lookup__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Name_lookup__c</fullName>
    <label>Service Provider Name lookup</label>
    <length>100</length>
    <type>Text</type>
</CustomField>