force-app/main/default/objects/Regulatory_Decision_Event__e/fields/transactionKey__c.field-meta.xml
<CustomField>
    <fullName>transactionKey__c</fullName>
    <label>transactionKey</label>
    <length>10</length>
    <type>Text</type>
</CustomField>