force-app/main/default/objects/Regulatory_Decision_Event__e/fields/Violation_ID__c.field-meta.xml
<CustomField>
    <fullName>Violation_ID__c</fullName>
    <description>Maps to Violation ID with API Name &apos;Name&apos;</description>
    <label>Violation ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>